--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,20 +8,21 @@
 @import 'bootstrap/scss/bootstrap';
 
 .company.card {
-    width: 320px;
+    width: 300px;
 }
 
 .card-footer.d-flex{
     gap:8px;
 }
 
-.companyLogo {
-    width: 200px;
+.employee, .editCompany {
+    .companyLogo {
+        width: 200px;
+    }
 }
 
 .company {
     .companyLogo {
-        max-width: 100px;
         position: absolute;
         bottom: -36px;
         max-height: 80px;
@@ -32,4 +33,20 @@
     }
 }
 
+.results {
+    gap: 20px;
+}
 
+.error {
+    color: red;
+}
+
+@media only screen and (max-width: 677px) {
+    .company.card {
+        width: 100%;
+    }
+
+    .cardContainer {
+        width: 100%;
+    }
+  }
